--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,20 @@ plugins {
 	id 'org.springframework.boot' version '3.1.2'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
+	id "org.sonarqube" version "4.4.1.3373"
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+
+sonar {
+	properties {
+		property "sonar.projectKey", "mju-ai-pro_ai-pro-server"
+		property "sonar.organization", "mju-ai-pro"
+		property "sonar.host.url", "https://sonarcloud.io"
+	}
+}
 
 repositories {
 	mavenCentral()
