--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: ['main']
   workflow_run:
-    workflows: [SonarCloud]
+    workflows: ["SonarCloud"]
     types:
       - completed
 
