--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,4 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        hibernate.dialect: org.hibernate.dialect.MySQLDialect
