--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,5 @@ spring:
     properties:
       hibernate:
         format_sql: true
-
 ai:
-  uri: "http://15.165.114.217/:5000/query"
+  uri: http://15.165.114.217/:5000/query
