--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,7 +50,7 @@ jobs:
           echo "$EC2_SSH_KEY" > private_key && chmod 600 private_key
           scp -o StrictHostKeyChecking=no -i private_key build/libs/AIPro-0.0.1-SNAPSHOT.jar ${EC2_USERNAME}@${EC2_HOST}:/home/AiPro-Spring/
           rm -f private_key
-      - name: Restart Application
+      - name: Restart Spring Application
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_PUBLIC_IP }}
