--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -114,7 +114,7 @@ jobs:
           EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: |
           echo "$EC2_SSH_KEY" > private_key && chmod 600 private_key
-          scp -o StrictHostKeyChecking=no -i private_key build/libs/AIPro-0.0.1-SNAPSHOT.jar ${EC2_USERNAME}@${EC2_HOST}:/home/AiPro-Spring/
+          scp -o StrictHostKeyChecking=no -i private_key build/libs/AiPro-0.0.1-SNAPSHOT.jar ${EC2_USERNAME}@${EC2_HOST}:/home/AiPro-Spring/
           rm -f private_key
           
       - name: Restart Spring Application
@@ -125,7 +125,7 @@ jobs:
           username: ${{ env.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            sudo chmod +x /home/AiPro-Spring/AIPro-0.0.1-SNAPSHOT.jar
+            sudo chmod +x /home/AiPro-Spring/AiPro-0.0.1-SNAPSHOT.jar
             sudo systemctl restart aipro.service
       
       - name: Send Deployment Success Notification
