--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
 	id "org.sonarqube" version "4.4.1.3373"
+	id 'jacoco'
 	id 'checkstyle'
 }
 
@@ -16,6 +17,7 @@ sonar {
 		property "sonar.organization", "mju-ai-pro"
 		property "sonar.host.url", "https://sonarcloud.io"
 		property 'sonar.java.checkstyle.reportPaths', 'build/reports/checkstyle/main.xml'
+		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
 	}
 }
 
@@ -23,8 +25,8 @@ compileJava.options.encoding = 'UTF-8'
 
 tasks.withType(Checkstyle) {
 	reports {
-		xml.required = true
-		html.required = true
+		xml.required.set(true)
+		html.required.set(true)
 	}
 }
 
@@ -35,6 +37,31 @@ checkstyle {
 }
 
 checkstyleMain.source = fileTree('src/main/java')
+
+test {
+	useJUnitPlatform()
+	finalizedBy 'jacocoTestReport'
+}
+
+jacoco {
+	toolVersion = "0.8.12"
+}
+
+jacocoTestReport {
+	reports {
+		html.required.set(true)
+		csv.required.set(true)
+		xml.required.set(true)
+	}
+
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: [
+					"**/AiProApplication.class"
+			])
+		}))
+	}
+}
 
 
 repositories {
